@@ -119,34 +119,32 @@ public class GUIUtilities
 		if(icon != null)
 			return icon;
 
-		// get the icon
-		if(MiscUtilities.isURL(iconName))
+		URL url;
+
+		try
 		{
-			icon = new ImageIcon(iconName.substring(5));
+			// get the icon
+			if(MiscUtilities.isURL(iconName))
+				url = new URL(iconName);
+			else
+				url = new URL(iconPath + iconName);
 		}
-		else
+		catch(Exception e)
 		{
 			try
 			{
-				URL url = new URL(iconPath + iconName);
-				icon = new ImageIcon(url);
+				url = new URL(defaultIconPath + iconName);
 			}
-			catch(Exception e)
+			catch(Exception ex)
 			{
-				try
-				{
-					URL url = new URL(defaultIconPath + iconName);
-					icon = new ImageIcon(url);
-				}
-				catch(Exception ex)
-				{
-					Log.log(Log.ERROR,GUIUtilities.class,
-						"Icon not found: " + iconName);
-					Log.log(Log.ERROR,GUIUtilities.class,ex);
-					return null;
-				}
+				Log.log(Log.ERROR,GUIUtilities.class,
+					"Icon not found: " + iconName);
+				Log.log(Log.ERROR,GUIUtilities.class,ex);
+				return null;
 			}
 		}
+
+		icon = new ImageIcon(url);
 
 		icons.put(iconName,icon);
 		return icon;
